--- a/Project/mp3agic/build.gradle
+++ b/Project/mp3agic/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:support-core-utils:28.0.0"
 }
 
 sourceCompatibility = "7"
