ic_launcher_playicon.png és különféle változatainak elkészítése
Signed-off-by: mac5562 <55428222+mac5562@users.noreply.github.com>

--- a/AFP2/app/src/main/AndroidManifest.xml
+++ b/AFP2/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".notification.NofiticationCenter"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_playicon"
         android:label="@string/Gramophone"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
